<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="transfer_list_title">خانه</string>
    <string name="transfer_list_balance_label">موجودی</string>
    <string name="transfer_list_price_formatted">%s ریال</string>
    <string name="transfer_list_chart_label">مدیریت مالی</string>
    <string name="transfer_list_spaces_label">باکس</string>
    <string name="transfer_list_charge_label">شارژ حساب</string>
    <string name="transfer_list_try_again">تلاش دوباره</string>
</resources>